update kamelets